[package]
name = "hier"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A library supports JVM class hierarchy lookup by extending JNI interface"
repository = "https://github.com/ChAoSUnItY/hier"
readme = "README.md"
keywords = ["jvm"]
authors = ["ChAoS-UnItY (Kyle Lin) <minecraft.kyle.train@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1" }
graphviz-rust = { version = "0.7.0", optional = true }
thiserror = { version = "1.0.56" }
once_cell = { version = "1.19.0" }
bitflags = { version = "2.4.2" }
paste = { version = "1.0" }
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
rstest = "0.18.2"

[features]
defaults = []
invocation = ["jni/invocation"]
graph = ["dep:graphviz-rust"]

[[example]]
name = "common_superclass"
required-features = ["invocation"]

[[example]]
name = "interfaces"
required-features = ["invocation"]
